<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/mexico"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/bandera_mexico"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/layout_info_mexico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#FF346339">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#FF346339">

                <Button
                    android:id="@+id/btn_ubicacion_mexico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#346339"
                    android:text="@string/ubicacion_mexico"
                    android:textSize="12sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#EFEFEF">
                <Button
                    android:id="@+id/btn_clima_mexico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EFEFEF"
                    android:text="@string/clima_mexico"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#FF0012">

                <Button
                    android:id="@+id/btn_turismo_mexico"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:backgroundTint="#FF0012"
                    android:text="@string/turismo" />
            </LinearLayout>
        </LinearLayout>

            <TextView
                android:id="@+id/txt_info_ubicacion_mexico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:text="" />
    </LinearLayout>



</LinearLayout>